2021-12-31  Bruno Haible  <bruno@clisp.org>

	doc: Update for Unicode 14.0.0.
	* doc/unictype.texi (Joining group): Document UC_JOINING_GROUP_THIN_YEH,
	UC_JOINING_GROUP_VERTICAL_TAIL.
	NEWS: Mention the update.

2021-12-30  Bruno Haible  <bruno@clisp.org>

	doc: Update for Unicode 11.0.0.
	* doc/unictype.texi (Joining group): Document
	UC_JOINING_GROUP_HANIFI_ROHINGYA_*.

2021-12-30  Bruno Haible  <bruno@clisp.org>

	doc: Document properties for Emojis.
	* doc/unictype.texi (Properties as objects): Document UC_PROPERTY_EMOJI,
	UC_PROPERTY_EMOJI_PRESENTATION, UC_PROPERTY_EMOJI_MODIFIER,
	UC_PROPERTY_EMOJI_MODIFIER_BASE, UC_PROPERTY_EMOJI_COMPONENT,
	UC_PROPERTY_EXTENDED_PICTOGRAPHIC.
	(Properties as functions): Document uc_is_property_emoji,
	uc_is_property_emoji_presentation, uc_is_property_emoji_modifier,
	uc_is_property_emoji_modifier_base, uc_is_property_emoji_component,
	uc_is_property_extended_pictographic.
	* NEWS: Mention the new properties.

2021-12-29  Bruno Haible  <bruno@clisp.org>

	doc: Update for new behaviour of line breaking functions.
	* doc/unilbrk.texi (unilbrk.h): Document UC_BREAK_CR_BEFORE_LF. Mention
	that this value can occur in the array returned by
	u*_possible_linebreaks and u*_width_linebreaks.
	* NEWS: Mention the change.

2021-12-26  Bruno Haible  <bruno@clisp.org>

	doc: Update for Unicode 10.0.0.
	* doc/unictype.texi (Joining group): Document
	UC_JOINING_GROUP_MALAYALAM_*.
	(Properties as objects): Document UC_PROPERTY_REGIONAL_INDICATOR.
	(Properties as functions): Document uc_is_property_regional_indicator.

2021-12-26  Bruno Haible  <bruno@clisp.org>

	doc: Update for Unicode 9.0.0.
	* doc/unictype.texi (Joining group): Document
	UC_JOINING_GROUP_AFRICAN_*.

2021-12-26  Bruno Haible  <bruno@clisp.org>

	doc: Update for Unicode 7.0.0.
	* doc/unictype.texi (Joining group): Document
	UC_JOINING_GROUP_STRAIGHT_WAW, UC_JOINING_GROUP_MANICHAEAN_*.

2021-12-26  Bruno Haible  <bruno@clisp.org>

	doc: Update for Unicode 6.3.0.