@@ -1,5 +1,5 @@
 /* List of exported symbols of libunistring on Cygwin.
-   Copyright (C) 2006, 2009 Free Software Foundation, Inc.
+   Copyright (C) 2006-2022 Free Software Foundation, Inc.
    Written by Bruno Haible <bruno@clisp.org>, 2006.
 
    This program is free software: you can redistribute it and/or
@@ -91,6 +91,12 @@ VARIABLE(UC_PROPERTY_DECIMAL_DIGIT)
 VARIABLE(UC_PROPERTY_DEFAULT_IGNORABLE_CODE_POINT)
 VARIABLE(UC_PROPERTY_DEPRECATED)
 VARIABLE(UC_PROPERTY_DIACRITIC)
+VARIABLE(UC_PROPERTY_EMOJI)
+VARIABLE(UC_PROPERTY_EMOJI_COMPONENT)
+VARIABLE(UC_PROPERTY_EMOJI_MODIFIER)
+VARIABLE(UC_PROPERTY_EMOJI_MODIFIER_BASE)
+VARIABLE(UC_PROPERTY_EMOJI_PRESENTATION)
+VARIABLE(UC_PROPERTY_EXTENDED_PICTOGRAPHIC)
 VARIABLE(UC_PROPERTY_EXTENDER)
 VARIABLE(UC_PROPERTY_FORMAT_CONTROL)
 VARIABLE(UC_PROPERTY_GRAPHEME_BASE)
@@ -130,6 +136,7 @@ VARIABLE(UC_PROPERTY_PRIVATE_USE)
 VARIABLE(UC_PROPERTY_PUNCTUATION)
 VARIABLE(UC_PROPERTY_QUOTATION_MARK)
 VARIABLE(UC_PROPERTY_RADICAL)
+VARIABLE(UC_PROPERTY_REGIONAL_INDICATOR)
 VARIABLE(UC_PROPERTY_SENTENCE_TERMINAL)
 VARIABLE(UC_PROPERTY_SOFT_DOTTED)
 VARIABLE(UC_PROPERTY_SPACE)
